<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="listener"
            type="com.example.bloold.buildp.ui.AddObjectActivity"/>
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:padding="@dimen/activity_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_object_item"
                    style="@style/StyleTitle" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/object_name"
                    style="@style/StyleSubTitle" />
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/object_name"
                    style="@style/StyleEditTextRect" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/folk_object_name"
                    style="@style/StyleSubTitle" />
                <EditText
                    android:id="@+id/etFolkName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/folk_object_name"
                    style="@style/StyleEditTextRect" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/address"
                    style="@style/StyleSubTitle" />
                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{listener::onChooseAddressClick}"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:hint="@string/address"
                    style="@style/StyleEditTextRect" />
                <TextView
                    android:id="@+id/tvAddObjectRules"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorLink="@color/red"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/edit_object_rules"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{listener::onGoToFullFormClick}"
                    android:layout_marginTop="@dimen/activity_vertical_margin_half"
                    android:padding="@dimen/activity_vertical_margin_half"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/go_to_full_form"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{listener::onAddObjectClick}"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    style="@style/RoundedBlueBtnStyle"
                    android:text="@string/add" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
        <FrameLayout
            android:id="@+id/flLoading"
            android:clickable="true"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loadingBackground">
            <ProgressBar
                style="?android:progressBarStyleLarge"
                android:indeterminate="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>
</layout>
